Fix swiping on iOS.

--- a/html/app.css
+++ b/html/app.css
@@ -63,22 +63,24 @@ div.splitAmountBox {
 .friendslist {
   display: flex;
   flex-direction: column;
-  width: 90%;
-  left: 5%;
+  width: 100%;
+  /*! left: 5%; */
   position: relative;
   list-style-type: none;
   padding: 0px;
   margin: 0px;
+  overflow: hidden;
 }
 
 .friendslistItem {
   width: 100%;
-  padding: 5px;
+  /*! padding: 5px; */
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-color: var(--item-sep-col, gray);
   background-color: red;
   position: relative;
+  margin: 0px;
 }
 
 .friendsListItem:nth-child(2) {
@@ -90,9 +92,12 @@ div.splitAmountBox {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  /*! height: 100%; */
   background-color: var(--global-bg-c);
-}
+  padding-top: 5px;
+  padding-bottom: 5px;
+  position: relative;
+}               
 
 div.splitAmount {
   background-color: transparent;
@@ -113,9 +118,11 @@ div.splitAmount {
 
 #main_interface {
   display: inherit;
-  position: relative;
+  position: absolute;
   overflow-y: scroll;
   height: 100%;
+  top: 0px;
+  width: 100%;
 }
 
 #noFriends {
